--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "laracasts/flash": "^3.1",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "mckenziearts/laravel-notify": "^1.1",
         "waavi/sanitizer": "^1.0",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
